--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "prop-types": "^15.6.2",
         "react": "^16.5.2"
     },
-    "url": "https://github.com/andyyou/react-coverflow.git",
+    "url": "https://github.com/alana314/react-coverflow-callback",
     "devDependencies": {
         "babel-core": "^6.26.3",
         "babel-eslint": "^9.0.0",
